Manual merge of pom.xml changes for GMM